--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
- 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Dasmoto's Arts & Crafts</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <header>
+            <h1>Dasmoto's Arts & Crafts</h1>
+        </header>
+        <main>
+            <section id="brushes">
+                <h2 class="green">Brushes</h2>
+                <img src="./images/hacksaw.jpeg" alt="Brushes" />
+                <h3>Hacksaw Brushes</h3>
+                <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span class="link">Starting at $3.00 / brush.</span></p>
+            </section>
+            <section id="frames">
+                <h2 class="coral">Frames</h2>
+                <img src="./images/frames.jpeg" alt="Frames" />
+                <h3>Art Frames (assorted)</h3>
+                <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span class="link">Starting at $2.00 / frame.</span></p>
+            </section>
+            <section id="paint">
+                <h2 class="blue">Paint</h2>
+                <img src="./images/finnish.jpeg" alt="Paint" />
+                <h3>Clean Finnish Paint</h3>
+                <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span class="link">Starting at $5.00 / tube.</span></p>
+            </section>
+        </main>
+        
+     
+        <script src="" async defer></script>
+    </body>
 </html>
